# tinyosprograms

./: .gitignore  .gitmodules  README.md
programs/cat/: Cargo.toml  build.rs  build.sh
programs/cat/src/: main.rs
programs/chmod/: Cargo.toml  build.rs  build.sh  rust-toolchain.toml
programs/chmod/src/: main.rs
programs/echo/: Cargo.toml  build.rs  build.sh
programs/echo/.cargo/: config.toml
programs/echo/src/: main.rs
programs/example-asm/: build.sh  exit.asm  linker.ld
programs/example-c/: .gitignore  Makefile  build.sh  linker.ld
programs/example-c/src/: main.c
programs/example-rs/: Cargo.toml  build.rs  build.sh  target.json  user.ld
programs/example-rs/src/: main.rs
programs/exit/: a.out  build.sh
programs/inspect_vars/: Cargo.toml  build.rs  build.sh  user.ld
programs/inspect_vars/src/: main.rs
programs/ls/: Cargo.toml  build.rs  build.sh
programs/ls/src/: main.rs
programs/read/: Cargo.toml  build.rs  build.sh  user.ld
programs/read/.cargo/: config.toml
programs/read/src/: main.rs
programs/rm/: Cargo.toml  build.rs  build.sh
programs/rm/src/: main.rs
programs/stat/: Cargo.toml  build.rs  build.sh
programs/stat/src/: main.rs
programs/touch/: Cargo.toml  build.sh  target.json
programs/touch/src/: main.rs
