[package]
name = "example-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
# libtinyos = { git = "https://github.com/lmeller-git/libtinyos" }
# tinygraphics = { git = "https://github.com/lmeller-git/libtinyos" }

libtinyos = { path = "../../../libtinyos/libtinyos" }
tinygraphics = {path = "../../../libtinyos/tinygraphics"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
